--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fastify-static": "^2.5.1",
     "mongodb": "^3.4.0",
     "react": "^16.12.0",
+    "react-ace": "^8.0.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
